/**
*   Copyright (c) 2021 - 3021 Aansutons Inc.
*/

/** About AnimVars
* -> Contains all animator controller parameter variables.
*/

public static class AnimVars
{
	public static string Forward = "Forward";
    public static string Horizontal = "Horizontal";
	public static string Vertical = "Vertical";
	public static string Turn = "Turn";
	public static string OnGround = "OnGround";
	public static string Turn_int = "Turn_int";
	public static string Sprint = "Sprint";
	public static string LeftFoot = "LeftFoot";
	public static string RightFoot = "RightFoot";
	public static string SuddenChange = "SuddenChange";
	public static string FacingDir = "FacingDir";
	public static string InputActive = "InputActive";
}
