/**
*   Copyright (c) 2021 - 3021 Aansutons Inc.
*/

/** About AnimatorStatics
* -> 
*/

public static class AnimatorStatics
{
    public static string Forward = "Forward";
    public static string Horizontal = "Horizontal";
	public static string Vertical = "Vertical";
	public static string Turn = "Turn";
	public static string OnGround = "OnGround";
	public static string Turn_int = "Turn_int";
	public static string sprint = "Sprint";
	public static string LeftFoot = "LeftFoot";
	public static string RightFoot = "RightFoot";
	public static string SuddenChange = "SuddenChange";
	public static string FacingDir = "FacingDir";
	public static string InputActive = "InputActive";
	public static string Jump = "Jump";
	public static string VaultDistance = "VaultDistance";
	public static string Random = "Random";
	public static string ObstacleType = "ObstacleType";
	public static string Slide = "Slide";
	public static string Crouch = "Crouch";
	public static string ClimbType = "ClimbType"; 
}
